--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,6 @@
 name = "dns"
 version = "0.0.1"
 authors = ["Jacob Okamoto <okam0013@umn.edu>"]
+description = "A DNS library for Rust."
+license = "BSD-2-Clause"
+
