--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "dns"
-version = "0.0.1"
+version = "0.0.1-pre"
 authors = ["Jacob Okamoto <okam0013@umn.edu>"]
 description = "A DNS library for Rust."
 license = "BSD-2-Clause"
