--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 
 name = "dns"
-version = "0.0.1-pre"
+version = "0.0.1-pre2"
 authors = ["Jacob Okamoto <okam0013@umn.edu>"]
 description = "A DNS library for Rust."
 license = "BSD-2-Clause"
-
+git = "https://github.com/oko/rust-dns"
