--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "dns"
-version = "0.0.2-pre2"
-authors = ["Jacob Okamoto <okam0013@umn.edu>"]
+version = "0.0.3-pre1"
+authors = ["Jacob Okamoto <oko@oko.io>"]
 description = "A DNS library for Rust."
 license = "BSD-2-Clause"
